fix: Change font size of player information as it was hidden under the playing cards

--- a/src/App.css
+++ b/src/App.css
@@ -265,7 +265,7 @@ td {
   /* Player Information */
   .player-information {
     grid-area: player-information;
-    font-size: 0.9rem;
+    font-size: 0.8rem;
   }
   .player-information div:last-child {
     margin-top: 0.8rem;
